--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
       {{nome}}
     </li>
 </ul>
+<ul *ngFor="let nome of nomes, let i= index">
+    <li>nome da pessoa é : {{nome}}, está na posição {{i +1}} </li>
+</ul>
