--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,27 @@
+<p>Exemplo 1 </p>
 <ul>
     <li *ngFor="let nome of nomes">
       {{nome}}
     </li>
 </ul>
+<hr>
+<p>Exemplo 2 </p>
 <ul *ngFor="let nome of nomes, let i= index">
     <li>nome da pessoa é : {{nome}}, está na posição {{i +1}} </li>
 </ul>
-
+<hr>
+<p>Exemplo 3 usando ngIf e hidden zerando a lista </p>
 <p *ngIf="nomes.length == 0"> Nenhum nome encontrado, usando *ngIf</p>
 <p [hidden]= "nomes.length > 0"> Nenhum nome encontrado, usando hidden </p> 
+<hr>
+<br>
+<p>Exemplo 4 usando keyup</p>
+<p>Exemplo implementando a busca </p>
+<input #box placeholder="digite um nome" (keyup)= "buscar(box.value)"/>
+<p> {{box.value}}</p>
+<hr>
+
+
+<ul *ngFor="let nomeFiltro of nomesFiltro">
+  <li>{{nomeFiltro}} </li>
+</ul>
