usando valor com reduce

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,9 @@
 <p> {{box.value}}</p>
 <hr>
 
-
 <ul *ngFor="let nomeFiltro of nomesFiltro">
   <li>{{nomeFiltro}} </li>
 </ul>
+<p>Exemplo 6 valores com reduce</p>
+<p> Salario total: {{getValorTotal()}}</p>
+<hr>
